modified:   .gitignore 	modified:   file1.py 	modified:   file2.py

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ trx.txt
 data.csv
 export_dataframe1.csv
 export_dataframe12.csv
+export_dataframe13.csv
 Smart meters Residential post-trial survey data.csv
 Smart meters Residential pre-trial survey data.csv
 Smart meters SME post-trial survey data.csv
