--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ElectricityTheftDetection/
+describeFile.py
 f1.py
 f4.py
 f3.py
@@ -8,6 +9,7 @@ data.csv
 export_dataframe1.csv
 export_dataframe12.csv
 export_dataframe13.csv
+export_dataframe14.csv
 Smart meters Residential post-trial survey data.csv
 Smart meters Residential pre-trial survey data.csv
 Smart meters SME post-trial survey data.csv
