--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,16 @@ describeFile.py
 f1.py
 f4.py
 f3.py
+file4.py
+file3.py
+file1.py
+file2.py
+model1.py
 trx.txt
 .idea
 data.csv
-export_dataframe1.csv
-export_dataframe12.csv
-export_dataframe13.csv
-export_dataframe14.csv
+preprocessed.csv
+visualization.csv
 Smart meters Residential post-trial survey data.csv
 Smart meters Residential pre-trial survey data.csv
 Smart meters SME post-trial survey data.csv
