modified:   .gitignore 	deleted:    export_dataframe1.7z 	deleted:    export_dataframe12.7z 	modified:   file1.py 	modified:   file2.py 	modified:   file3.py 	modified:   file4.py

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ trx.txt
 data.csv
 preprocessed.csv
 visualization.csv
+preprocessed.7z
 Smart meters Residential post-trial survey data.csv
 Smart meters Residential pre-trial survey data.csv
 Smart meters SME post-trial survey data.csv
